[update] 공공 데이터 엔티티 요청에 대한 업데이트 11 (마이데이터 가져오는 방법 수정): toList 해결